Tilføjelse: Ændret layout til baggrund for app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Galgeleg_fragm</string>
+    <string name="app_name">G21 - Galgeleg </string>
     <string name="action_settings">Settings</string>
 
     <!-- TODO: Remove or change this placeholder text -->
