--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">G21 - Galgeleg </string>
+    <string name="app_name">g21 galgeleg </string>
     <string name="action_settings">Settings</string>
     <string name="pref_user_name">PREF_USER_NAME</string>
 
